--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -2,8 +2,8 @@
     <!-- Base application theme. -->
     <style name="Theme.MeMaww" parent="Theme.MaterialComponents.DayNight.NoActionBar">
         <!-- Primary brand color. -->
-        <item name="colorPrimary">@color/memaww_blue</item>
-        <item name="colorPrimaryVariant">@color/memaww_blue_dark</item>
+        <item name="colorPrimary">@color/color_memaww_blue</item>
+        <item name="colorPrimaryVariant">@color/color_memaww_blue_dark</item>
         <item name="colorOnPrimary">@color/white</item>
         <!-- Secondary brand color. -->
         <item name="colorSecondary">@color/teal_200</item>
@@ -14,10 +14,30 @@
         <!-- Customize your theme here. -->
     </style>
 
+    <style name="loginActivityHintStyle" parent="TextAppearance.AppCompat">
+        <!-- Hint color and label color in FALSE state -->
+        <item name="android:textColorHint">@android:color/darker_gray</item>
+        <item name="android:textSize">20sp</item>
+        <item name="textInputStyle">@style/Widget.Design.TextInputLayout</item>
+        <!-- Label color in TRUE state and bar color FALSE and TRUE State -->
+        <item name="colorAccent">@color/color_memaww_blue_dark</item>
+        <item name="colorControlNormal">@color/color_memaww_blue_dark</item>
+        <item name="colorControlActivated">@color/color_memaww_blue_dark</item>
+        <item name="android:textColorHighlight">@color/color_dot_inactive</item>
+        <item name="android:textColorLink">@color/color_memaww_blue_dark</item>
+    </style>
 
     <style name="ProgressBarWHite" parent="@style/Widget.AppCompat.ProgressBar">
         <item name="android:backgroundTint">@color/white</item>
         <item name="android:indeterminateTint">@color/white</item>
         <item name="android:minWidth">200dp</item>
     </style>
+
+
+    <style name="ProgressBarBlack" parent="@style/Widget.AppCompat.ProgressBar">
+        <item name="android:backgroundTint">@color/white</item>
+        <item name="android:indeterminateTint">@color/color_memaww_blue_dark</item>
+        <item name="android:minWidth">200dp</item>
+    </style>
+
 </resources>
