--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -13,6 +13,7 @@
     <color name="color_memaww_blue_dark">#0A68B3</color>
     <color name="color_dot_inactive">#ada996</color>
     <color name="color_shadow">#4e4e4e</color>
+    <color name="color_gray">#918D8D</color>
 
 
 </resources>
