--- a/app/src/main/res/layout/slider_layout_info2.xml
+++ b/app/src/main/res/layout/slider_layout_info2.xml
@@ -11,14 +11,14 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        app:layout_constraintGuide_percent="0.6" />
+        app:layout_constraintGuide_percent="0.70" />
 
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/slider_activity_slider_layout_guideline_h2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        app:layout_constraintGuide_percent="0.67" />
+        app:layout_constraintGuide_percent="0.77" />
 
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/slider_activity_slider_layout_guideline_h3"
@@ -27,28 +27,58 @@
         android:orientation="horizontal"
         app:layout_constraintGuide_percent="0.97" />
 
-    <androidx.constraintlayout.widget.ConstraintLayout
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/slider_activity_slider_layout_guideline_h4"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        app:layout_constraintGuide_percent="0.03" />
+
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/slider_activity_slider_layout_guideline_h5"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        app:layout_constraintGuide_percent="0.13" />
+
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/slider_activity_slider_layout_guideline_v1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        app:layout_constraintGuide_percent="0.05" />
+
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/slider_activity_slider_layout_guideline_v2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        app:layout_constraintGuide_percent="0.25" />
+
+
+    <ImageView
+        android:id="@+id/slider_activity_slider_layout_logo"
+        android:layout_width="0dp"
+        android:layout_height="00dp"
+        android:contentDescription=""
+        android:elevation="2dp"
+        app:layout_constraintTop_toBottomOf="@+id/slider_activity_slider_layout_guideline_h4"
+        app:layout_constraintBottom_toTopOf="@+id/slider_activity_slider_layout_guideline_h5"
+        app:layout_constraintStart_toEndOf="@+id/slider_activity_slider_layout_guideline_v1"
+        app:layout_constraintEnd_toStartOf="@+id/slider_activity_slider_layout_guideline_v2"
+        app:srcCompat="@drawable/logo_blue" />
+
+    <ImageView
+        android:id="@+id/slider_activity_slider_layout_slider_image"
         android:layout_width="0dp"
         android:layout_height="0dp"
+        android:contentDescription=""
+        android:scaleType="centerCrop"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toTopOf="@+id/slider_activity_slider_layout_guideline_h1"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        android:background="@color/white">
-
-        <ImageView
-            android:id="@+id/slider_activity_slider_layout_slider_image"
-            android:layout_width="250dp"
-            android:layout_height="250dp"
-            android:contentDescription=""
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:srcCompat="@drawable/logo_white" />
-
-    </androidx.constraintlayout.widget.ConstraintLayout>
-
+        app:srcCompat="@drawable/slider2" />
     <TextView
         android:id="@+id/slider_activity_slider_layout_slider_text_title"
         android:layout_width="0dp"
@@ -57,7 +87,7 @@
         android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginBottom="8dp"
-        android:text="Laundry Made Easy"
+        android:text="ORDER PICK UP"
         android:textAlignment="center"
         android:textColor="@color/white"
         android:textSize="22sp"
@@ -77,7 +107,7 @@
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
-        android:text="Using a FishPott brings you suggestions to invest in business all over the world while protecting your investment with insurance."
+        android:text="With the option to pay on pick-up, as soon as we get your order, we will have our pickup team contact you at your scheduled pickup time and come for the unwashed laundry"
         android:textAlignment="center"
         android:textColor="@color/white"
         app:layout_constraintBottom_toTopOf="@+id/slider_activity_slider_layout_guideline_h3"
