--- a/app/src/main/res/layout/activity_reader_web_view.xml
+++ b/app/src/main/res/layout/activity_reader_web_view.xml
@@ -86,7 +86,7 @@
 
             <ProgressBar
                 android:id="@+id/activity_webview_loader"
-                style="@style/ProgressBarBlack"
+                style="@style/ProgressBarBlue"
                 android:layout_width="26dp"
                 android:layout_height="32dp"
                 android:layout_alignEnd="@id/activity_webview_constraint2_title_textview"
