--- a/app/src/main/res/layout/fragment_collection_form.xml
+++ b/app/src/main/res/layout/fragment_collection_form.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.cardview.widget.CardView
+<androidx.constraintlayout.widget.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
@@ -132,7 +132,8 @@
             android:id="@+id/fragment_collectionform_pickuplocation_edittext_layout_holder"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:theme="@style/loginActivityHintStyle"
+            android:theme="@style/fragmentFormHintStyle"
+            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
             app:layout_constraintLeft_toRightOf="@+id/fragment_collectionform_guideline_v1"
             app:layout_constraintRight_toLeftOf="@+id/fragment_collectionform_guideline_v2"
             app:layout_constraintTop_toTopOf="@+id/fragment_collectionform_guideline_h1">
@@ -157,6 +158,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
             android:theme="@style/loginActivityHintStyle"
+            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
             app:layout_constraintEnd_toStartOf="@+id/fragment_collectionform_guideline_v2"
             app:layout_constraintStart_toEndOf="@+id/fragment_collectionform_guideline_v1"
             app:layout_constraintTop_toBottomOf="@+id/fragment_collectionform_pickuplocation_edittext_layout_holder">
@@ -185,20 +187,21 @@
             app:layout_constraintEnd_toStartOf="@+id/fragment_collectionform_guideline_v2"
             app:layout_constraintStart_toStartOf="@+id/fragment_collectionform_guideline_v1"
             app:layout_constraintTop_toBottomOf="@+id/fragment_collectionform_pickuplocdatetime_layout_holder"
-            app:layout_constraintVertical_bias="0.0">
+            app:layout_constraintVertical_bias="0.0"
+            android:hint="Contact Phone Number"
+            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
 
-            <EditText
+            <!--this is the actual edit text which takes the input-->
+            <com.google.android.material.textfield.TextInputEditText
                 android:id="@+id/fragment_collectionform_contactpersonphone_edittext"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:ems="10"
                 android:digits="0123456789"
                 android:maxLength="10"
-                android:hint="Contact Phone Number"
                 android:inputType="phone"
                 android:labelFor="@id/fragment_collectionform_pickupdatetime_edittext"
                 android:textColor="@drawable/login_activity_input_text_color" />
-
 
         </com.google.android.material.textfield.TextInputLayout>
 
@@ -217,4 +220,4 @@
             app:layout_constraintVertical_bias="0.0" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
-</androidx.cardview.widget.CardView>
+</androidx.constraintlayout.widget.ConstraintLayout>
