--- a/app/src/main/res/layout/fragment_light_weight_items_form.xml
+++ b/app/src/main/res/layout/fragment_light_weight_items_form.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.cardview.widget.CardView
+<androidx.constraintlayout.widget.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
@@ -133,6 +133,7 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:theme="@style/loginActivityHintStyle"
+            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
             app:layout_constraintLeft_toRightOf="@+id/fragment_collectionform_guideline_v1"
             app:layout_constraintRight_toLeftOf="@+id/fragment_collectionform_guideline_v2"
             app:layout_constraintTop_toTopOf="@+id/fragment_collectionform_guideline_h1">
@@ -157,6 +158,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
             android:theme="@style/loginActivityHintStyle"
+            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
             app:layout_constraintEnd_toStartOf="@+id/fragment_collectionform_guideline_v2"
             app:layout_constraintStart_toEndOf="@+id/fragment_collectionform_guideline_v1"
             app:layout_constraintTop_toBottomOf="@+id/fragment_collectionform_pickuplocation_edittext_layout_holder">
@@ -218,4 +220,4 @@
             app:layout_constraintVertical_bias="0.0" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
-</androidx.cardview.widget.CardView>
+</androidx.constraintlayout.widget.ConstraintLayout>
