--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -14,7 +14,8 @@
     <color name="color_dot_inactive">#ada996</color>
     <color name="color_shadow">#4e4e4e</color>
     <color name="color_gray">#918D8D</color>
-    <color name="color_gray_light">#E4E3E3</color>
+    <color name="color_gray_light_v1">#E4E3E3</color>
+    <color name="color_gray_light_v2">#F3F2F2</color>
     <color name="color_blue_light">#5BB7DDEF</color>
     <color name="color_green_light">#8BC34A</color>
     <color name="color_green_dark">#457A07</color>
